# sdd-harness

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  HARNESS.md  LICENSE  README.md  SETUP.md  USAGE.md
.claude/: settings.json
.claude/agents/: code-reviewer.md  product-analyst.md  quality-analyst.md  scenario-author.md  solution-analyst.md  spec-compliance.md  test-coverage.md
.claude/hooks/: guard_architecture.py  guard_harness.py  guard_no_verify.py  guard_sdd_gates.py  test_guards.py
.claude/profiles/: README.md  apply.py  validate.py
.claude/profiles/_schema/: contract.md  profile.template.yml
.claude/profiles/python-fastapi/: profile.yml
.claude/profiles/python-fastapi/agents/: backend-engineer.md  frontend-engineer.md
.claude/profiles/python-fastapi/rules/: backend-adapters.md  backend-application.md  backend-domain.md  backend-infrastructure.md  frontend-src.md
.claude/profiles/python-fastapi/skills/backend-architecture/: SKILL.md  performance.md  reference-impl.md
.claude/profiles/python-fastapi/skills/design/: SKILL.md
.claude/profiles/python-fastapi/skills/e2e-testing/: SKILL.md
.claude/profiles/python-fastapi/skills/frontend-architecture/: SKILL.md  reference-impl.md
.claude/skills/bdd/: SKILL.md
.claude/skills/discover/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/plan/: SKILL.md
.claude/skills/specify/: SKILL.md  ears.md
.claude/skills/tasks/: SKILL.md
.claude/skills/ubiquitous-language/: SKILL.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/adapters/: __init__.py
backend/app/adapters/api/: __init__.py
backend/app/adapters/schemas/: __init__.py
backend/app/application/: __init__.py
backend/app/domain/: __init__.py
backend/app/infrastructure/: __init__.py  db.py
backend/scripts/: check_no_raw_sql.sh
docs/: sdd-call-map.html
frontend/: .dependency-cruiser.cjs  .prettierignore  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
specs/: README.md
