[project]
name = "aim-trainer-backend"
version = "0.1.0"
description = "Aim Trainer backend (FastAPI, Clean Architecture)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-bdd>=8.1",
    "ruff>=0.8",
    "pyright>=1.1.390",
    "import-linter>=2.1",
    "xenon>=0.9",
    "pre-commit>=4.0",
]

[tool.uv]
# Application project (not a distributable library): do not build the project itself.
package = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
typeCheckingMode = "strict"
include = ["app", "tests"]
pythonVersion = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]

# --- Clean Architecture enforcement (import-linter) ---
# Run with: uv run lint-imports
# Dependencies point inward only. Outermost first; domain is innermost and depends on nothing.
[tool.importlinter]
root_package = "app"
# Required because the forbidden contracts below reference external packages
# (fastapi, sqlalchemy, pydantic, ...).
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Clean Architecture layer dependencies"
type = "layers"
layers = [
    "app.infrastructure",
    "app.adapters",
    "app.application",
    "app.domain",
]

# domain is the innermost, pure layer: it must not import any web/ORM framework.
[[tool.importlinter.contracts]]
name = "domain must be framework-free"
type = "forbidden"
source_modules = ["app.domain"]
forbidden_modules = [
    "fastapi",
    "starlette",
    "sqlalchemy",
    "pydantic",
    "pydantic_settings",
    "uvicorn",
]

# application depends on domain only: no web framework, no ORM, no Pydantic
# (input/output validation belongs to adapters/schemas in the strict CA layout).
[[tool.importlinter.contracts]]
name = "application must not depend on web or ORM frameworks"
type = "forbidden"
source_modules = ["app.application"]
forbidden_modules = [
    "fastapi",
    "starlette",
    "sqlalchemy",
    "pydantic",
    "pydantic_settings",
    "uvicorn",
]
